overflow-y fix products, update currency.js

--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ main {
     height: 93vh;
     width: 60vw;
     justify-content: center;
+    overflow-y: scroll;
 }
 
 .product {
